# vault_gui

./: Cargo.toml  README.md  READNE.md  config.toml  config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement_request.yml
.github/workflows/: rust-core.yaml
src/: lib.rs  main.rs
