[package]
name = "vault_gui"
version = "0.2.1"
edition = "2021"
authors = ["Xanthus58 <Xanthus58@protonmail.com>"]
description = "A gui frontend to manage a mock bank database"
repository = "https://github.com/Xanthus58/vault_gui"
license = "MIT"
readme = "README.md"
keywords = ["bank", "gui"]

[dependencies]
#gui frontend
eframe = "0.22.0"
egui-notify = "0.9.0"

#misc
tokio = { version = "1.32.0", features = ["full"] } #Allows for aync/threading 
regex = "1.9.5" #Uses this to check ip validity

#Used for config file
serde = "1.0"
serde_yaml = "0.9"
indexmap = "2.0.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "unwind"
codegen-units = 16
lto = true
incremental = false
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256